--- a/public/reset.css
+++ b/public/reset.css
@@ -1,154 +1,188 @@
-html,
+/* @import "./iconfont.css"; */
+
+
+/* 清除内外边距 */
+
 body,
-div,
-span,
-applet,
-object,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6,
+hr,
 p,
 blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
 dl,
 dt,
 dd,
-ol,
 ul,
+ol,
 li,
+pre,
 fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
+lengend,
+button,
+input,
+textarea,
 th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+td {
     margin: 0;
     padding: 0;
-    border: 0;
+}
+
+
+/* 设置默认字体 */
+
+body,
+button,
+input,
+select,
+textarea {
+    /* for ie */
+    /*font: 12px/1 Tahoma, Helvetica, Arial, "宋体", sans-serif;*/
+    font: 12px/1.3 "Microsoft YaHei", Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif;
+    /* 用 ascii 字符表示，使得在任何编码下都无问题 */
+    color: #333;
+}
+
+h1 {
+    font-size: 18px;
+    /* 18px / 12px = 1.5 */
+}
+
+h2 {
+    font-size: 16px;
+}
+
+h3 {
+    font-size: 14px;
+}
+
+h4,
+h5,
+h6 {
     font-size: 100%;
-    font: inherit;
+}
+
+address,
+cite,
+dfn,
+em,
+var,
+i {
+    font-style: normal;
+}
+
+
+/* 将斜体扶正 */
+
+b,
+strong {
     font-weight: normal;
-    vertical-align: baseline;
 }
 
 
-/* HTML5 display-role reset for older browsers */
+/* 将粗体扶细 */
 
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
+code,
+kbd,
+pre,
+samp,
+tt {
+    font-family: "Courier New", Courier, monospace;
 }
 
-ol,
+
+/* 统一等宽字体 */
+
+small {
+    font-size: 12px;
+}
+
+
+/* 小于 12px 的中文很难阅读，让 small 正常化 */
+
+
+/* 重置列表元素 */
+
 ul,
-li {
+ol {
     list-style: none;
 }
 
-blockquote,
-q {
-    quotes: none;
+
+/* 重置文本格式元素 */
+
+a {
+    text-decoration: none;
+    color: #666;
 }
 
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: '';
-    content: none;
+
+/* 重置表单元素 */
+
+legend {
+    color: #000;
 }
+
+
+/* for ie6 */
+
+fieldset,
+img {
+    border: none;
+}
+
+button,
+input,
+select,
+textarea {
+    font-size: 100%;
+    /* 使得表单元素在 ie 下能继承字体大小 */
+}
+
+
+/* 重置表格元素 */
 
 table {
     border-collapse: collapse;
     border-spacing: 0;
 }
 
-th,
-td {
-    vertical-align: middle;
+
+/* 重置 hr */
+
+hr {
+    border: none;
+    height: 1px;
+}
+
+.clearFix::after {
+    content: "";
+    display: block;
+    clear: both;
 }
 
 
-/* custom */
+/* 让非ie浏览器默认也显示垂直滚动条，防止因滚动条引起的闪烁 */
 
-a {
-    outline: none;
-    color: #16418a;
-    text-decoration: none;
-    -webkit-backface-visibility: hidden;
+html {
+    overflow-y: scroll;
 }
 
-a:focus {
-    outline: none;
+a:link:hover {
+    color: rgb(79, 76, 212) !important;
+    text-decoration: underline;
 }
 
-input:focus,
-select:focus,
-textarea:focus {
-    outline: -webkit-focus-ring-color auto 0;
+
+/* 清除浮动 */
+
+.clearfix::after {
+    display: block;
+    height: 0;
+    content: "";
+    clear: both;
+    visibility: hidden;
 }
